--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -18,7 +18,7 @@
                 <h1>Inscription</h1>
                 <form method="post" action="{{ path('app_login') }}">
                     <div class="field">
-                        <label for="email">Email</label>
+                        <label for="email">Adresse email</label>
                         <input class="form-control" type="email" value="{{ last_username }}" name="_username" id="email" required autofocus>
                     </div>
                     <div class="field">
@@ -29,6 +29,10 @@
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                     <div class="form-actions">
                         <button class="btn btn-action" type="submit">Se connecter</button>
+                    </div>
+                    <div class="form-actions">
+                        <button class="btn btn-action" type="submit">S'inscrire</button>
+                        <a href="{{ path('app_register') }}" class="btn-link">Pas encore de compte ? S'inscrire</a>
                     </div>
                 </form>
             </div>
