--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -52,7 +52,7 @@
 
                 <div class="form-actions">
                     <button class="btn btn-action" type="submit">S'inscrire</button>
-                    <a href="#" class="btn-link">Déjà un compte ? Se connecter</a>
+                    <a href="{{ path('app_login') }}" class="btn-link">Déjà un compte ? Se connecter</a>
                 </div>
 
                 {{ form_end(form) }}
