products page + fix form

--- a/public/_dev/css/theme.scss
+++ b/public/_dev/css/theme.scss
@@ -9,6 +9,7 @@
 @use "./pages/product.scss" as *;
 @use "./pages/cart.scss" as *;
 @use "./pages/account.scss" as *;
+@use "./pages/products.scss" as *;
 
 @use "./component/_link.scss" as *;
 
